--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 120px;
+    width: 360;
+    /*border: 3px solid black;*/
     position: absolute;
     left: 0;
     right: 0;
@@ -37,7 +38,7 @@ body {
 }
 
 .text { 
-    font-size: 50px;
+    font-size: calc(1rem + 2vw);
     text-align: center;
 }
 
